# board-of-directors

./: .env.example  BOD-GEMINI.md  BOD-IMPLEMENTATION-GUIDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
assets/: avatar-prompts.md
claude-code/convene-council/: SKILL.md
docs/: build-log.md
docs/plans/: 2026-03-18-bod-notion-contest.md
integrations/n8n/: BOD-n8n-README.md
integrations/n8n/docs/: BOD-n8n-API.md  BOD-n8n-SETUP.md
integrations/n8n/workflows/: BOD-main-workflow.json  BOD-quick-consult-workflow.json
scripts/: runway_video.py
skills/BOD-masterclass-scout/: BOD-instructor-reference.md  BOD-report-template.md  README.md  SKILL.md  manifest.json
system/: BOD-README.md  BOD-agent-statistics.md  BOD-deliberation-log.md  BOD-outcome-log.md  BOD-scout-log.md  BOD-user-preferences.md
system/agents/arbiter/: marcus-aurelius.md
system/examples/: BOD-complete-deliberation-example.md
system/rules/: BOD-AGENT_ROUTER.md  BOD-AGENT_UPDATE_PROTOCOL.md  BOD-APPEAL_PROTOCOL.md  BOD-CONFIDENCE_CALIBRATION.md  BOD-CONTEXT_BRIEFING.md  BOD-COUNCIL.md  BOD-DIVERSITY_REVIEW.md  BOD-ESCALATION_PROTOCOL.md  BOD-UNKNOWN_REQUESTS.md
system/templates/: BOD-briefing-template.md  BOD-combined-report.md  BOD-debate-transcript.md  BOD-final-judgment.md  BOD-individual-report.md
tests/: test_runway_video.py
workflows/: BOD-brief-council.md  BOD-convene-council.md  BOD-customize-roster.md  BOD-init.md  BOD-log-deliberation.md  BOD-log-outcome.md  BOD-marcus-speaks-n8n-workflow.md  BOD-marcus-speaks.md  BOD-masterclass-scout.md  BOD-quick-consult.md
(+26 files in other folders)
